quality(all): get swagger working and cleanup
